# systemprompt-mcp-admin

./: Cargo.toml  MIGRATION_PLAN.md  justfile  manifest.yaml
src/: lib.rs  main.rs
src/prompts/: admin_analysis.rs  agent_management.rs  mod.rs  system_health.rs
src/repository/: mod.rs
src/resources/: mod.rs
src/server/: constructor.rs  mod.rs
src/server/handlers/: initialization.rs  tools.rs
src/services/: mod.rs  role_discovery.rs
src/tools/: mod.rs
src/tools/content/: mod.rs  models.rs  repository.rs  sections.rs
src/tools/conversations/: mod.rs  repository.rs  sections.rs
src/tools/dashboard/: mod.rs  repository.rs  sections.rs
src/tools/jobs/: mod.rs
src/tools/logs/: mod.rs  repository.rs  sections.rs
src/tools/operations/: mod.rs  schema.rs  validation.rs
src/tools/traffic/: mod.rs  repository.rs  sections.rs
src/tools/users/: mod.rs  repository.rs  schema.rs
tests/common/: db.rs
tests/repositories/: mod.rs
tests/tools/: dispatch_test.rs
